# portfolio_of_ocaml

./: dune-project  portfolio_of_ocaml.opam
lib/: dune
lib/mantra/: Mantra.ml  dune
lib/v_commons/: dune
setup/: deps.sh  init.env.sh
test/: dune
